--- a/style.css
+++ b/style.css
@@ -1,15 +1,18 @@
-html {
-  font-size: 62.5%;
+* {
+  font-size: 100%;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: normal;
 }
+
 body {
-  font-family: 'Quicksand', sans-serif;
   background: #fff;
   margin: 0px;
 }
 h1 {
   text-align: left;
   color: #3671b6;
-  font-size: 3.4rem;
+  font-size: 2.2rem;
+  font-weight: bold;
 }
 
 button {
@@ -30,7 +33,7 @@ ul {
   border-color: #3671b6;
   background-color: #fff;
   color: #000;
-  font-size: 2rem;
+  font-size: 1.3rem;
   padding: 5px;
   padding-left: 10px;
   padding-right: 10px;
@@ -40,7 +43,7 @@ ul {
   border-radius: 20px;
   min-height: 25px;
   border-width: 2px;
-  font-size: 2rem;
+  font-size: 1.3rem;
   padding: 5px;
   padding-left: 10px;
   padding-right: 10px;
@@ -75,7 +78,7 @@ ul {
     transition: 0.5s;
     outline: none;
     font-weight: bold;
-    font-size: 1.6rem;
+    font-size: 1rem;
 }
 
 .header-button:hover {
@@ -90,7 +93,7 @@ ul {
   border: 2px solid #232323;
   background-color: #fff;
   color: #000;
-  font-size: 1.6rem;
+  font-size: 1rem;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   padding: 5px;
@@ -134,7 +137,7 @@ ul {
 }
 
 .card-text-box {
-  font-size: 1.4rem;
+  font-size: 0.9rem;
   font-weight: bold;
   padding-left: 10px;
   margin-bottom: 0px;
@@ -146,7 +149,7 @@ ul {
 }
 
 .card-text {
-  font-size: 1.4rem;
+  font-size: 0.9rem;
   font-weight: bold;
   padding-left: 10px;
   margin-bottom: 0px;
@@ -234,7 +237,7 @@ ul {
 }
 
 .review-user-text {
-  font-size: 1.4rem;
+  font-size: 0.9rem;
   font-weight: bold;
   padding-left: 10px;
   margin-bottom: 0px;
@@ -244,7 +247,7 @@ ul {
 }
 
 .review-full-button {
-  font-size: 1.4rem;
+  font-size: 0.9rem;
   font-weight: bold;
   padding-left: 10px;
   color: #fff;
@@ -258,7 +261,7 @@ ul {
 }
 
 .user-button {
-  font-size: 1.4rem;
+  font-size: 0.9rem;
   font-weight: bold;
   padding-left: 10px;
   color: #fff;
@@ -277,4 +280,8 @@ ul {
 
 .heart-icon:hover {
   color: #ffd000;
+}
+
+.long-text {
+  font-weight: normal;
 }
