--- a/src/Details/css/moviestyle.css
+++ b/src/Details/css/moviestyle.css
@@ -18,7 +18,6 @@ h1 {
   color: #3671b6;
   font-size: 2.2rem;
   font-weight: bold;
-  padding-top: 30px;
 }
 
 button {
@@ -127,10 +126,16 @@ ul {
   padding-bottom: 100px;
 }
 
-.star-icon{
+.star-icon-small{
   color: #f5c518;
   height: 20px;
   width: 20px;
+}
+
+.star-icon-big{
+  color: #f5c518;
+  height: 40px;
+  width: 40px;
 }
 
 .card-star {
@@ -275,4 +280,137 @@ ul {
 
 .long-text {
   font-weight: normal;
+}
+
+.movie-card{
+  display: flex;
+  width: 70%;
+  height: 400px;
+  border: 2px solid #3671b6;
+}
+
+.movie-poster {
+  height: 100%;
+  width: 250px;
+  border-right: 2px solid #3671b6;
+  padding: 1px
+}
+
+.movie-photos {
+  height: 100%;
+  width: 100%;
+  padding: 1px;
+}
+
+.movie-description {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.movie-description-text {
+  background-color: #3671b6;
+  width: 70%;
+}
+
+.description-box{
+  color: #fff;
+  border-bottom: 2px solid #fff;
+  padding: 10px 5px;
+  margin: 0px 10px;
+}
+
+.movie-label{
+  border: 2px solid #fff;
+  border-radius: 20px;
+  padding: 7px;
+  color: #fff;
+}
+
+.movie-label:hover {
+  background-color: #5da9ff70;
+}
+
+.border-none {
+  border: none;
+}
+
+.movie-title {
+  width: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding-top: 30px;
+}
+
+.movie-rating {
+  font-size: 1.5rem;
+  color: #232323;
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+.movie-sinopse {
+  border-bottom: 2px solid #3671b6;
+  padding: 15px;
+  margin-top: 20px;
+}
+
+.pdT {
+  padding-top: 30px;
+}
+
+.movie-title-more {
+  width: 70%;
+  padding-top: 30px;
+}
+
+.movie-cast-list {
+  columns: 2;
+  -webkit-columns: 2;
+  -moz-columns: 2;
+  padding-top: 30px;
+}
+
+.movie-cast-text {
+  text-align: center;
+  padding:10px;
+}
+
+.movie-watch-button {
+  color: #fff;
+  font-size: 24px;
+  align-items: center;
+  display: flex;
+  border: 2px solid #fff;
+  border-radius: 20px;
+  padding: 7px;
+}
+
+.movie-watch-button:hover {
+  border: 2px solid #f5c518;
+  background-color: #5da9ff70;
+}
+
+.movie-watch-icon {
+  margin-right: 5px;
+  color: #f5c518;
+}
+
+.movie-watch-text {
+  font-size: 16px;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.pdT10 {
+  margin-top: 10px;
+}
+
+.bg-main {
+  background-color: #3671b6;
 }
