Fix user review text

--- a/src/Details/css/moviestyle.css
+++ b/src/Details/css/moviestyle.css
@@ -283,6 +283,11 @@ ul {
   color: #000;
 }
 
+.long-text-review {
+  font-weight: normal;
+  color: #fff;
+}
+
 .movie-card{
   display: flex;
   width: 70%;
