--- a/src/Login/css/loginContrast.css
+++ b/src/Login/css/loginContrast.css
@@ -1,7 +1,23 @@
 *{
-    margin: 0px;
-    padding: 0px;
+    font-size: 100%;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: normal;
+    margin: 0;
+    padding: 0;
+    border: none;
+    outline: none;
+    box-sizing: border-box;
 }
+
+h1 {
+    font-size: 25px;
+    font-weight: bold;
+}
+
+button {
+    cursor: pointer;
+    background-color: transparent;
+  }
 
 main{
     display: flex;
@@ -9,7 +25,7 @@ main{
     justify-content: center;
     width: 100vw;
     height: 100vh;
-    background-color: #232323;
+    background-color: #000;
     align-items: center;
     vertical-align: middle;
 }
@@ -24,7 +40,7 @@ main{
     min-width: 300px;
     min-height: 250px;
     color: #FFFF00;
-    background-color: #232323;
+    background-color: #000;
     border: 1px solid #FFFF00;
     border-radius: 15px;
     box-shadow: 0px 24px, 24px, 16px;
@@ -40,13 +56,13 @@ main{
 }
 
 .logInputfields{
-    border-radius: 0px 10px 0px 10px;
+    border-radius: 10px;
     height: 25px;
     border: 2px solid #FFFF00;
     font-size: 14pt;
     background-color: #232323;
     color: #FFFF00;
-    padding: 0px 0px 0px 10px;
+    padding: 20px;
 }
 
 .label-input{
@@ -77,4 +93,3 @@ main{
     border: 2px solid rgb(30, 196, 14);
     
 }
-
