--- a/src/Login/css/loginDark.css
+++ b/src/Login/css/loginDark.css
@@ -1,7 +1,23 @@
 *{
-    margin: 0px;
-    padding: 0px;
+    font-size: 100%;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: normal;
+    margin: 0;
+    padding: 0;
+    border: none;
+    outline: none;
+    box-sizing: border-box;
 }
+
+h1 {
+    font-size: 25px;
+    font-weight: bold;
+}
+
+button {
+    cursor: pointer;
+    background-color: transparent;
+  }
 
 main{
     display: flex;
@@ -40,12 +56,12 @@ main{
 }
 
 .logInputfields{
-    border-radius: 0px 10px 0px 10px;
+    border-radius: 10px;
     height: 25px;
     border: 2px solid #747474;
     font-size: 14pt;
     color: #3671b6;
-    padding: 0px 0px 0px 10px;
+    padding: 20px;
 }
 
 .label-input{
@@ -76,4 +92,3 @@ main{
     border: 2px solid rgb(30, 196, 14);
     
 }
-
