--- a/views/templates/moviecard.ejs
+++ b/views/templates/moviecard.ejs
@@ -5,7 +5,7 @@
     <button class="card-button">
         <span class="card-inner">
             <% if (Movie.Image) { %>
-                <img class="card-image" src="<%= Movie.Image %>"> alt="Not Found"/>
+                <img class="card-image" src="<%= Movie.Image %>" alt="Not Found"/>
             <%} else { %>
                 <img class="card-image" src="https://patriciaelias.com.br/wp-content/uploads/2021/01/placeholder.png" alt="Not Found"/>
             <% } %>
