--- a/views/templates/userreviewcard.ejs
+++ b/views/templates/userreviewcard.ejs
@@ -4,7 +4,7 @@
 <li class="review-card">
     <button class="review-image-button">
         <% if (User.Image) { %>
-            <img class="review-image" src="<%= User.Image %>"> alt="Not Found"/>
+            <img class="review-image" src="<%= User.Image %>" alt="Not Found"/>
         <%} else { %>
             <img class="review-image" src="https://t3.ftcdn.net/jpg/02/68/55/60/240_F_268556012_c1WBaKFN5rjRxR2eyV33znK4qnYeKZjm.jpg" alt="Not Found"/>
         <% } %>
