Add list movies and go to details on click

--- a/views/movie/details.ejs
+++ b/views/movie/details.ejs
@@ -82,7 +82,7 @@
                     <h1 class="pdT">Elenco</h1>
                     <ul class="movie-cast-list movie-sinopse long-text" >
                         <li>
-                            <p class="movie-cast-text"><b class="bold"><%= Movie.cast %></p>
+                            <p class="movie-cast-text"><%= Movie.cast %></p>
                         </li>
                     </ul>
                 </div>
