--- a/views/templates/moviecard.ejs
+++ b/views/templates/moviecard.ejs
@@ -1,20 +1,21 @@
 <head>
     <link rel="stylesheet" href="/css/moviecard.css">
+    <script src="/js/scripts.js"></script>
 </head>
 <li class="card">
-    <button class="card-button">
+    <button class="card-button" onclick="onMoviePress('<%-Movie.id%>')">
         <span class="card-inner">
-            <% if (Movie.Image) { %>
-                <img class="card-image" src="<%= Movie.Image %>" alt="Not Found"/>
+            <% if (Movie.imagePoster) { %>
+                <img class="card-image" src="<%= Movie.imagePoster %>" alt="Not Found"/>
             <%} else { %>
                 <img class="card-image" src="https://patriciaelias.com.br/wp-content/uploads/2021/01/placeholder.png" alt="Not Found"/>
             <% } %>
             <span class="card-text-box">
                 <span class="card-star">
                     <svg class="star-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" role="presentation"><path d="M12 20.1l5.82 3.682c1.066.675 2.37-.322 2.09-1.584l-1.543-6.926 5.146-4.667c.94-.85.435-2.465-.799-2.567l-6.773-.602L13.29.89a1.38 1.38 0 0 0-2.581 0l-2.65 6.53-6.774.602C.052 8.126-.453 9.74.486 10.59l5.147 4.666-1.542 6.926c-.28 1.262 1.023 2.26 2.09 1.585L12 20.099z"></path></svg>
-                    <b class="card-text"><%= Movie.Score %></b>
+                    <b class="card-text"><%= Movie.score %></b>
                 </span>
-                <b class="card-text"><%= Movie.Name %></b>
+                <b class="card-text"><%= Movie.title %></b>
             </span>
         </span>
     </button>
