--- a/public/css/moviecard.css
+++ b/public/css/moviecard.css
@@ -13,10 +13,11 @@
     border: 2px solid #3671b6;
     display: flex;
     flex-direction: column;
+    max-width: 274px;
   }
 
   .card-image {
-    height: 185px;
+    height: 400px;
     width: 274px;
   }
 
