--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -3,6 +3,7 @@
     <script src="/js/scripts.js"></script>
 </head>
 <div class="header">
+    <button class="home-button" type="button" onclick="onHomePress()">Resumindo</button>
     <button class="header-button" type="button" onclick="onListMoviesPress()">Filmes</button>
     <button class="header-button" type="button">Jogos</button>
     <button class="header-button" type="button">Livros</button>
