--- a/views/templates/userreviewcard.ejs
+++ b/views/templates/userreviewcard.ejs
@@ -1,29 +1,30 @@
 <head>
     <link rel="stylesheet" href="/css/reviewcard.css">
+    <script src="/js/scripts.js"></script>
 </head>
 <li class="review-card">
-    <button class="review-image-button">
-        <% if (User.Image) { %>
-            <img class="review-image" src="<%= User.Image %>" alt="Not Found"/>
+    <button class="review-image-button" onclick="onMoviePress('<%-Review.mediaId%>')">
+        <% if (Review.imagePoster) { %>
+            <img class="review-image" src="<%= Review.imagePoster %>" alt="Not Found"/>
         <%} else { %>
             <img class="review-image" src="https://t3.ftcdn.net/jpg/02/68/55/60/240_F_268556012_c1WBaKFN5rjRxR2eyV33znK4qnYeKZjm.jpg" alt="Not Found"/>
         <% } %>
     </button>
     <div class="review-body">
-        <button class="user-button">
-            <%= User.Username %>
+        <button class="user-button" onclick="onUserPress('<%-Review.userId%>')">
+            <%= Review.username %>
         </button>
         <div class="card-star">
             <svg class="star-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" role="presentation"><path d="M12 20.1l5.82 3.682c1.066.675 2.37-.322 2.09-1.584l-1.543-6.926 5.146-4.667c.94-.85.435-2.465-.799-2.567l-6.773-.602L13.29.89a1.38 1.38 0 0 0-2.581 0l-2.65 6.53-6.774.602C.052 8.126-.453 9.74.486 10.59l5.147 4.666-1.542 6.926c-.28 1.262 1.023 2.26 2.09 1.585L12 20.099z"></path></svg>
-            <p class="card-text"><%= User.Score %></p>
+            <p class="card-text"><%= Review.score %></p>
         </div>
-        <p class="card-text long-text"><%= User.Review %></p>
+        <p class="card-text long-text"><%= Review.description %></p>
         <div class="card-star">
             <div class="card-star">
                 <button class="heart-button">
                     <i class="fa fa-heart heart-icon"></i>
                 </button>
-                <p class="card-text"><%= User.LikeCount %> likes</p>
+                <p class="card-text">10 likes</p>
             </div>
             <button class="review-full-button">
                 Ver crítica completa
