--- a/public/css/reviewcard.css
+++ b/public/css/reviewcard.css
@@ -1,7 +1,7 @@
 .review-card {
     display: flex;
     border: 2px solid #3671b6;
-    max-width: 800px;
+    width: 800px;
     min-height: 228px;
     list-style: none;
     margin-top: 30px;
@@ -21,6 +21,7 @@
     padding-left: 10px;
     padding-top: 10px;
     background-color: #3671b6;
+    width: 100%;
   }
 
   .review-full-button {
