Add login page and actions

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
         <script src="/js/scripts.js"></script>
     </head>
     <body>
-        <%- include('templates/header'); %>
+        <%- include('templates/header', { IsLogged: IsLogged}); %>
         <div class="main">
             <div>
                 <h1>Em Alta</h1>
