--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -17,7 +17,7 @@
             loadFollowedsCount('<%-User.id%>');
             loadFollowersCount('<%-User.id%>');
         </script>
-        <%- include('../templates/header'); %>
+        <%- include('../templates/header', { IsLogged: IsLogged}); %>
         <div class="main">
                 <div class="profile-info">
                     <h1><%= User.nickName %></h1>
@@ -39,9 +39,9 @@
                 </div>
 
                 <div class="follow">
-                    <button class="follow-btn" type="button" id="follow-button" onclick="handleFollowButton('<%-User.id%>')">Seguir</button>
+                    <button class="follow-btn" type="button" id="follow-button" onclick="handleFollowButton('<%-UserId%>', '<%-User.id%>')">Seguir</button>
                 </div>
-                <script>loadFollowButton('<%-User.id%>');</script>
+                <script>loadFollowButton('<%-UserId%>', '<%-User.id%>');</script>
                 <h1>Filmes</h1>
                 <ul class="card-list">
                     <li class="card">
