--- a/views/templates/userreviewcard.ejs
+++ b/views/templates/userreviewcard.ejs
@@ -22,11 +22,11 @@
         <p class="card-text long-text"><%= Review.description %></p>
         <div class="card-star">
             <div class="card-star">
-                <button class="heart-button" id="like-button-<%-Review.id%>" onclick="handleLikeButton('<%-Review.id%>')">
+                <button class="heart-button" id="like-button-<%-Review.id%>" onclick="handleLikeButton('<%-UserId%>', '<%-Review.id%>')">
                     <i class="fa fa-heart"></i>
                 </button>
                 <p class="card-text" id="like-count-<%-Review.id%>"><%= Review.likeCount %> likes</p>
-                <script>loadLikedButton('<%-Review.id%>');</script>
+                <script>loadLikedButton('<%-UserId%>', '<%-Review.id%>');</script>
             </div>
             <button class="review-full-button">
                 Ver crítica completa
